--- a/frontend/src/app/pages/question/question.component.css
+++ b/frontend/src/app/pages/question/question.component.css
@@ -1,43 +1,3 @@
-/* 
-<div class="question-page">
-    <div class="top-section">
-        <div class="ask-question">
-            <button mat-raised-button routerLink="/questions/ask" color="accent">
-                Ask a Question
-            </button>
-        </div>
-    </div>
-    <div class="question-section">
-        <app-progress-spinner *ngIf="loading"></app-progress-spinner>
-        <ng-container *ngIf="(question$ | async ) as question; else noquestion">
-            <app-question class="question" [question]="question"></app-question>
-        </ng-container>
-    </div>
-    <ng-template #noquestion>
-        <div class="no-question" *ngIf="!loading">
-            <p>The question does not exist.</p>
-            <button mat-raised-button color="accent" (click)="goBack()">Go Back</button>
-        </div>
-    </ng-template>
-    <div class="comments-section">
-        <div class="comments-title">
-            <h2>Comments</h2>
-        </div>
-        <app-progress-spinner *ngIf="loading"></app-progress-spinner>
-        <div class="comments">
-            <ng-container *ngIf="(comments$ | async ) as comments">
-                <div class="comments" *ngIf="comments.length>0">
-                    <app-comment class="comment" *ngFor="let comment of comments" [comment]="comment"></app-comment>
-                </div>
-            </ng-container>
-        </div>
-        <div class="add-comment">
-            <app-add-comment></app-add-comment>
-        </div>
-    </div>
-</div>
-*/
-
 .question-page {
   margin: 1rem 5rem;
 }
@@ -70,8 +30,117 @@
   align-items: center;
 }
 
-.question {
+.question-card {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 1rem;
+  margin: 1rem 0;
+  border-radius: 5px;
+}
+
+.question-card .question {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
+}
+
+.voting-answers-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 1rem;
+  width: 15%;
+  height: 100%;
+}
+
+.voting {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.voting button {
+  padding: 0;
+}
+
+.voting .count {
+  font-size: 0.8rem;
+}
+
+.answers-count {
+  margin: 1rem 0;
+  font-size: 0.8rem;
+}
+
+.question-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.question-content a {
+  color: black;
+}
+
+.question-content .question-title h3 {
+  margin: 0;
+  padding: 0;
+}
+
+.question-content .description {
+  margin: 0.5rem 0;
+}
+
+.question-content .tags {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.question-content .tags span {
+  padding: 0.2rem 0.5rem;
+  margin-right: 0.5rem;
+  background-color: #cde9fe;
+  color: black;
+  font-size: 0.8rem;
+}
+
+.question-content .user-info {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 0.8rem;
+}
+
+.question-content .user-info img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 0.5rem;
+}
+
+.answer-btn {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin: 1.5rem 0 0.5rem 0;
+}
+
+.answer-btn button {
+  color: white;
+  width: 15%;
+  font-size: 1rem;
+}
+
+.answer-btn button:hover {
+  background-color: #f48225;
 }
 
 .no-question {
