--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -7,10 +7,11 @@
         <button mat-button routerLink="/tags" routerLinkActive="active">Tags</button>
         <button mat-button routerLink="/users" routerLinkActive="active">Users</button>
     </div>
-    <mat-form-field appearance="outline" class="search-container">
-        <input matInput placeholder="Search">
-        <mat-icon class="search-icon" matSuffix matTooltip="Search">search</mat-icon>
-    </mat-form-field>
+    <!-- if on the questions page hide the search form-->
+    <!-- <mat-form-field appearance="outline" class="search-container">
+        <input matInput placeholder="Search" [(ngModel)]="searchTerm" (keyup.enter)="search()" disabled="{{isQuestionsPage()}}">
+        <mat-icon class="search-icon" matSuffix matTooltip="Search" (click)="search()">search</mat-icon>
+    </mat-form-field> -->
     <div class="sign-btns">
         <button mat-button routerLink="/sign-in">Sign In</button>
         <button mat-raised-button color="accent" routerLink="/sign-up">Sign Up</button>
