--- a/frontend/src/app/components/user/user.component.css
+++ b/frontend/src/app/components/user/user.component.css
@@ -8,12 +8,11 @@
   padding: 20px;
   border-radius: 5px;
   margin: 1rem;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
 
 .user-card:hover {
   border: 1px solid #ff6f00;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .user-card-header {
