--- a/frontend/src/app/pages/questions/questions.component.html
+++ b/frontend/src/app/pages/questions/questions.component.html
@@ -9,6 +9,14 @@
                 <button mat-raised-button routerLink="/questions/ask" color="accent">Ask a Question</button>
             </div>
         </div>
+        <div class="search-form-container">
+            <form>
+                <mat-form-field>
+                    <input type="text" placeholder="Look for an answer to your question..." aria-label="Search question"
+                        matInput [(ngModel)]="searchTerm" name="search">
+                </mat-form-field>
+            </form>
+        </div>
         <div class="questions-container">
             <mat-tab-group [selectedIndex]="selectedquestionCategory">
                 <mat-tab *ngFor="let questionCategorie of questionCategories" [label]="questionCategorie.label">
