--- a/frontend/src/app/pages/tags/tags.component.html
+++ b/frontend/src/app/pages/tags/tags.component.html
@@ -22,8 +22,9 @@
                 <app-progress-spinner *ngIf="loading"></app-progress-spinner>
                 <ng-container *ngIf="(tags$ | async ) as tags; else noTags">
                     <div class="tags" *ngIf="tags.length>0; else noTags">
-                        <app-tag class="tag" *ngFor="let tag of tags | filterTags:searchType:searchTerm | sortTags: sortBy"
-                            [tag]="tag">
+                        <app-tag class="tag"
+                            *ngFor="let tag of tags | filterTags:searchType:searchTerm | sortTags: sortBy" [tag]="tag"
+                            searchTermHighlight="{{searchTerm}}">
                         </app-tag>
                     </div>
                 </ng-container>
