--- a/frontend/src/app/components/question/question.component.html
+++ b/frontend/src/app/components/question/question.component.html
@@ -35,6 +35,8 @@
         </div>
     </div>
     <div class="answer-btn">
-        <button mat-raised-button color="accent" routerLink="/questions/{{question.id}}#answer">Answer</button>
+        <button mat-raised-button color="accent" routerLink="/questions/{{question.id}}" appToScroll="add-answer">
+            {{question.answersCount > 0 ? 'Add Answer' : 'Be The First To Answer'}}
+        </button>
     </div>
 </mat-card>
