--- a/frontend/src/app/pages/admin-dashboard/admin-dashboard.component.css
+++ b/frontend/src/app/pages/admin-dashboard/admin-dashboard.component.css
@@ -1,5 +1,4 @@
 .dashboard-page {
-  height: 80%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -8,7 +7,7 @@
 }
 
 .top-section {
-  height: 30%;
+  height: 15%;
   width: 90%;
   display: flex;
   justify-content: space-between;
@@ -22,9 +21,9 @@
 }
 
 .avatar-container {
-  width: 10rem;
-  height: 10rem;
-  margin-right: 3rem;
+  width: 5rem;
+  height: 5rem;
+  margin-right: 2rem;
 }
 
 .avatar {
@@ -40,20 +39,20 @@
 }
 
 .bio h1 {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   font-weight: 600;
   margin-bottom: 0;
 }
 
 .bio p {
-  font-size: 1.5rem;
+  font-size: 0.8rem;
   font-weight: 500;
 }
 
 .edit-profile button {
-  width: 10rem;
-  height: 3rem;
-  font-size: 1rem;
+  width: 8rem;
+  height: 2.5rem;
+  font-size: 0.8rem;
 }
 
 .edit-profile button:hover {
@@ -63,53 +62,55 @@
 .analytics {
   width: 90%;
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 3rem;
 }
 
-.analytics mat-card {
-  width: 30%;
-  height: 10rem;
-  margin-bottom: 2rem;
+.analytics .chart {
+  width: 70%;
+  height: 20rem;
+  margin: 2rem 0;
+  /* background-color: gray; */
 }
 
-mat-card div {
+.chart img {
+  width: 100%;
   height: 100%;
+  object-fit: cover;
+}
+
+.analytics .cards {
+  width: 90%;
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  border-radius: 5px;
+}
+
+.cards mat-card {
+  width: 20%;
+  height: 8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
 
-mat-card div:hover {
+mat-card:hover {
   border: 1px solid #ff6f00;
 }
 
-.answers,
-.questions,
-.tags {
-  display: flex;
-  justify-content: center;
-  width: 100%;
+mat-card p {
+  text-align: center;
 }
 
-.answers p,
-.questions p,
-.tags p {
-  font-size: 1.2rem;
-  font-weight: 500;
-}
-
-.answers span,
-.questions span,
-.tags span {
+p span {
+  font-size: 2rem;
   font-weight: 600;
 }
 
-.answers a,
-.questions a,
-.tags a {
+a {
   color: #0a95ff;
 }
