--- a/frontend/src/app/components/comment/comment.component.html
+++ b/frontend/src/app/components/comment/comment.component.html
@@ -1,6 +1,6 @@
 <div class="comment">
     <div class="content">
-        <p>{{comment.text}}</p>
+        <p>{{comment.body}}</p>
         <div class="user-info">
             <img src="{{comment.user.avatar}}" alt="{{comment.user.name}}">
             <!-- TODO: Add Time Ago Pipe, should factor modified date -->
