--- a/frontend/src/app/pages/sign-in/sign-in.component.css
+++ b/frontend/src/app/pages/sign-in/sign-in.component.css
@@ -30,11 +30,11 @@
 }
 
 .sign-in-page .forgot-password {
-  text-align: right;
+  body-align: right;
 }
 
 .sign-in-page .sign-up {
-  text-align: center;
+  body-align: center;
   margin-top: 20px;
 }
 
