--- a/frontend/src/app/pages/ask-question/ask-question.component.html
+++ b/frontend/src/app/pages/ask-question/ask-question.component.html
@@ -13,7 +13,7 @@
                 <div class="question-field question-title">
                     <mat-form-field appearance="outline">
                         <mat-label>Title</mat-label>
-                        <input matInput type="text" formControlName="title" />
+                        <input matInput type="body" formControlName="title" />
                         <mat-hint align="start">
                             Be specific and imagine you’re asking a question to another person.</mat-hint>
                         <mat-error *ngIf="f['title'].invalid && f['title'].touched">
