--- a/frontend/src/app/pages/question/question.component.html
+++ b/frontend/src/app/pages/question/question.component.html
@@ -6,10 +6,9 @@
             </button>
         </div>
     </div>
-    <div class="question-section">
-        <app-progress-spinner *ngIf="loading"></app-progress-spinner>
-        <ng-container *ngIf="(question$ | async ) as question; else noquestion">
-            <!-- <app-question class="question" [question]="question"></app-question> -->
+    <app-progress-spinner *ngIf="loading"></app-progress-spinner>
+    <ng-container *ngIf="(question$ | async ) as question; else noquestion">
+        <div class="question-section">
             <mat-card class="question-card">
                 <div class="question">
                     <div class="voting-answers-section">
@@ -51,46 +50,42 @@
                     </button>
                 </div>
             </mat-card>
-        </ng-container>
-    </div>
+        </div>
+        <div class="comments-section">
+            <div class="comments-title">
+                <h2>Comments</h2>
+            </div>
+            <app-progress-spinner *ngIf="loading"></app-progress-spinner>
+            <div class="question-comments" *ngIf="question.comments.length>0">
+                <!-- TODO: Pass the type of comment and the id -->
+                <app-comment class="question-comment" *ngFor="let comment of question.comments"
+                    [comment]="comment"></app-comment>
+            </div>
+            <div class="add-comment">
+                <app-add-comment></app-add-comment>
+            </div>
+        </div>
+        <mat-divider></mat-divider>
+        <div class="answers-section">
+            <app-progress-spinner *ngIf="loading"></app-progress-spinner>
+                <div class="answers-title">
+                    <h2>Answers({{question.answers.length}})</h2>
+                </div>
+                <div class="answers">
+                    <div class="answers" *ngIf="question.answers.length>0">
+                        <app-answer class="answer" *ngFor="let answer of question.answers" [answer]="answer"></app-answer>
+                    </div>
+                </div>
+            <div class="add-answer-section" id="add-answer">
+                <h2>Your Answer</h2>
+                <app-add-answer class="add-answer" [questionId]="question.id"></app-add-answer>
+            </div>
+        </div>
+    </ng-container>
     <ng-template #noquestion>
         <div class="no-question" *ngIf="!loading">
             <p>The question does not exist.</p>
             <button mat-raised-button color="accent" (click)="goBack()">Go Back</button>
         </div>
     </ng-template>
-    <div class="comments-section">
-        <div class="comments-title">
-            <h2>Comments</h2>
-        </div>
-        <app-progress-spinner *ngIf="loading"></app-progress-spinner>
-        <ng-container *ngIf="(comments$ | async ) as comments">
-            <div class="question-comments" *ngIf="comments.length>0">
-                <!-- TODO: Pass the type of comment and the id -->
-                <app-comment class="question-comment" *ngFor="let comment of comments"
-                    [comment]="comment"></app-comment>
-            </div>
-        </ng-container>
-        <div class="add-comment">
-            <app-add-comment></app-add-comment>
-        </div>
-    </div>
-    <mat-divider></mat-divider>
-    <div class="answers-section">
-        <app-progress-spinner *ngIf="loading"></app-progress-spinner>
-        <ng-container *ngIf="(answers$ | async ) as answers">
-            <div class="answers-title">
-                <h2>Answers({{answers.length}})</h2>
-            </div>
-            <div class="answers">
-                <div class="answers" *ngIf="answers.length>0">
-                    <app-answer class="answer" *ngFor="let answer of answers" [answer]="answer"></app-answer>
-                </div>
-            </div>
-        </ng-container>
-        <div class="add-answer-section" id="add-answer">
-            <h2>Your Answer</h2>
-            <app-add-answer class="add-answer"></app-add-answer>
-        </div>
-    </div>
 </div>
